# superai-ss6

./: .gitignore  Makefile  README.md  ROADMAP.md  SuperAI_SS6_Technical_Report.docx  context.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent_pipeline/: __init__.py  api.py  checks.py  cli.py  config.py  normalize.py  review.py  vcs.py
agent_pipeline/agents/: __init__.py  architect.py  design.py  developer.py  evaluator.py
agent_pipeline/graph/: __init__.py  state.py
agent_pipeline/llm/: __init__.py  client.py
agent_pipeline/rag/: __init__.py  embeddings.py  ingest.py  lexical.py  retriever.py  vector_store.py
docs/: DEMO.md
eval/: BASELINE.md  IMPACT.md  debate_quality.py  design_quality.py  execution_quality.py  impact_study.py  plan_quality.py  rag_eval_dataset.json  recall_at_k.py
scripts/: init_rag.py  query_rag.py  run_debate.py  run_execute.py  run_plan.py  ss6_demo.sh
target_repo/: README.md  docker-compose.yml
target_repo/backend/: .env.example  Dockerfile  jest.config.js  package.json  tsconfig.json
target_repo/backend/db/migrations/: 001_schema.sql  002_seed.sql  003_expansion.sql  004_expansion_seed.sql
target_repo/backend/scripts/: migrate.js
target_repo/backend/src/: app.ts  server.ts
target_repo/backend/src/aws/: smsClient.ts  snsClient.ts  sqsClient.ts
target_repo/backend/src/config/: index.ts
target_repo/backend/src/controllers/: analyticsController.ts  (+9 more)
target_repo/frontend/: Dockerfile  angular.json  nginx.conf  package.json
target_repo/frontend/src/: index.html  styles.scss
target_repo/localstack/: init-aws.sh
tests/: test_design.py  test_developer.py  test_evaluator.py  test_m3_full.py  test_pipeline_extras.py  test_plan.py  test_rag.py  test_rag_bm25.py  test_repair.py
(+51 files in other folders)
